# fontgrep

./: .gitignore  CHANGELOG.md  Cargo.toml  PROGRESS.md  README.md  TODO.md  WORK.md  old_main.rs
.github/workflows/: benchmark.yml  rust.yml
benches/: bench.rs
src/: cache.rs  cli.rs  font.rs  fontinfo.rs  lib.rs  main.rs  matchers.rs  query.rs  utils.rs
