[package]
name = "fontgrep"
version = "0.2.1"
edition = "2021"
authors = [
    "Simon Cozens <simon@simon-cozens.org>",
    "Adam Twardoch <adam+github@twardoch.com>",
]
description = "A tool to search for fonts based on various criteria"
license = "MIT"
repository = "https://github.com/simoncozens/fontgrep"
readme = "README.md"
keywords = ["font", "search", "opentype", "typography"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "fontgrep"
path = "src/lib.rs"

[[bin]]
name = "fontgrep"
path = "src/main.rs"

[dependencies]
# Core dependencies
skrifa = "0.28.1"
clap = { version = "4.4.6", features = ["derive"] }
regex = "1.9.5"
jwalk = "0.8.1"
thiserror = "1.0.48"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
dirs = "5.0.1"
num_cpus = "1.16.0"
memmap2 = "0.5.10"
env_logger = "0.11.2"
log = "0.4.20"
itertools = "0.14.0"

[dev-dependencies]
tempfile = "3.8.0"
criterion = "0.5.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
#strip = true
debug = true
